--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -70,7 +70,11 @@
 ==შენიშვნები==
 * სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
+==ლიტერატურა==
 
+* [http://ancientrome.ru/antlitr/plutarch/sgo/romul-f.htm პლუტარქე - რომულუსის ბიოგრაფია (რუსულად)]
+* [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Romulus პლუტარქე - რომულუსის ბიოგრაფია (ინგლისურად)]
+* [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი - რომის ისტორია (რუსულად)]
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
