--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -68,7 +68,7 @@
 ითვლება რომ რომულუსი 54 წლის ასაკში, მეფობის 38 წელს გაქრა.
 
 ==შენიშვნები==
-* სტატია დაწერილია [[პლუტარქოსი|პლუტარქოსის]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
+* სტატია დაწერილია [[პლუტარქე|პლუტარქეს]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
 ==ლიტერატურა==
 
