--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -76,9 +76,9 @@
 * [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Romulus პლუტარქე - რომულუსის ბიოგრაფია (ინგლისურად)]
 * [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი - რომის ისტორია (რუსულად)]
 
-{{start box}}
-{{succession box|title=[[King of Rome]]|before=&mdash;|after=[[Numa Pompilius]]|years=753-717 BC}}
-{{end box}}
+<table>
+<tr><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+</table>
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
