--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -70,7 +70,7 @@
 ==შენიშვნები==
 * სტატია დაწერილია [[პლუტარქე|პლუტარქეს]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
 
-==ლიტერატურა==
+==რესურსები ინტერნეტში==
 
 * [http://ancientrome.ru/antlitr/plutarch/sgo/romul-f.htm პლუტარქე - რომულუსის ბიოგრაფია (რუსულად)]
 * [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Romulus პლუტარქე - რომულუსის ბიოგრაფია (ინგლისურად)]
