--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -76,9 +76,11 @@
 * [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Romulus პლუტარქე - რომულუსის ბიოგრაფია (ინგლისურად)]
 * [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი - რომის ისტორია (რუსულად)]
 
-<table>
+<center>
+<table border=1 bgcolor=yellow>
 <tr><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
 </table>
+</center>
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
