--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -76,11 +76,14 @@
 * [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Romulus პლუტარქე - რომულუსის ბიოგრაფია (ინგლისურად)]
 * [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი - რომის ისტორია (რუსულად)]
 
+
 <center>
 <table border=1 bgcolor=yellow>
 <tr><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr><td> - </td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
 </table>
 </center>
+
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
