--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -79,8 +79,8 @@
 
 <center>
 <table border=1 bgcolor=yellow>
-<tr><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
-<tr><td> - </td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
+<tr><td>წინამორბედი</td><td><center>რომის მეფე</center></td><td>შემდგომი</td></tr>
+<tr><td></center> - </center></td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
 </table>
 </center>
 
