--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -78,9 +78,9 @@
 
 
 <center>
-<table border=1 bgcolor=yellow>
+<table border=1 background="#F9FF87">
 <tr><td>წინამორბედი</td><td><center>რომის მეფე</center></td><td>შემდგომი</td></tr>
-<tr><td></center> - </center></td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
+<tr><td><center> - </center></td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
 </table>
 </center>
 
