--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -4,6 +4,13 @@
 
 {{ესკიზი}}
 
+<center>
+<table border=1>
+<tr align="center" bgcolor="Silver"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr align="center"><td> - </td><td>[[ძვ. წ. 716]]-[[ძვ. წ. 672]]</td><td>[[ტულიუს ჰოსტილიუსი]]</td></tr>
+</table>
+</center>
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
 
