*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -4,12 +4,14 @@
 
 {{ესკიზი}}
 
+
 <center>
 <table border=1>
 <tr align="center" bgcolor="Silver"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
-<tr align="center"><td> - </td><td>[[ძვ. წ. 716]]-[[ძვ. წ. 672]]</td><td>[[ტულიუს ჰოსტილიუსი]]</td></tr>
+<tr align="center"><td>[[რომულუსი]]</td><td>[[ძვ. წ. 716]]-[[ძვ. წ. 672]]</td><td>[[ტულიუს ჰოსტილიუსი]]</td></tr>
 </table>
 </center>
+
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
