*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -79,7 +79,7 @@
 
 <center>
 <table border=1>
-<tr align="center" bgcolor="Silver"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
 <tr align="center"><td> - </td><td>[[ძვ. წ. 753]]-[[ძვ. წ. 717]]</td><td>[[ნუმა პომპილიუსი]]</td></tr>
 </table>
 </center>
