*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -8,13 +8,15 @@
 <center>
 <table border=1>
 <tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
-<tr align="center"><td>[[რომულუსი]]</td><td>[[ძვ. წ. 716]]-[[ძვ. წ. 672]]</td><td>[[ტულიუს ჰოსტილიუსი]]</td></tr>
+<tr align="center"><td>[[რომულუსი]]</td><td>[[ძვ. წ. 716]]-[[ძვ. წ. 674]]</td><td>[[ტულიუს ჰოსტილიუსი]]</td></tr>
 </table>
 </center>
 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
+[[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 674]]
 
 [[bg:Нума Помпилий]]
 [[de:Numa Pompilius]]
