--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -11,7 +11,7 @@
 
 ქალაქი [[რომი]] ძვ. წ. VIII საუკუნეში დაარსდა მდინარე [[ტიბრი|ტიბრის]] ნაპირზე პალატინის ბორცვზე. მის დაარსებას უკავშირებელ რომის ლეგენდარულ პირველ მეფეს [[რომულუსი|რომულუსს]]. 
 
-ლეგენდის თანახმად ტყუპები [[რომულუსი და რემუსი]] დედით იყვნენ ტროადან გამოქცეული გმირი ენეასის ჩამომავლები, ხოლო მათი მამა იყო ომის ღმერთი [[მარსი]].
+ლეგენდის თანახმად ტყუპები [[რომულუსი|რომულუსი და რემუსი]] დედით იყვნენ ტროადან გამოქცეული გმირი ენეასის ჩამომავლები, ხოლო მათი მამა იყო ომის ღმერთი [[მარსი]].
 
 ქალაქის აშენების დროს რემუსმა რომულუსი გააბრაზა, და ამ უკანასკნელმა მოკლა იგი და მარტო დაასრულა ქალაქის მშენებლობა. დამკვიდრებული ტრადიციის მიხედვით ეს [[ძვ. წ. 753]] წელს მოხდა.
 
@@ -20,7 +20,6 @@
 რომულუსმა არაერთი ეტრუსკული ქალაქი დაანგრია და მოსახლეობა რომში გამორეკა. ლეგენდის მიხედვით, რომულის გარდაცვალებისთვის, რომი ძლიერი და მდიდარი ქალაქი იყო. რომის მონარქიის პერიოდის შესახებ როგორც ავღნიშნეთ ზუსტი ისტორიული ცნობები ძალიან მწირია, ამიტომ გვიწევს ლეგენდების მოშველიება.
 
 უძველესი რომის მოსახლეობა იყოფებოდა 300 გვარად, ყოველი 10 გვარი გაერთიანებული იყო კურიად, ხოლო 10 კურია - ტრიბად. ამგვარად სულ 3 ტრიბი იყო.
-
 
 ==რომის მეფეები==
 
