*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -1,3 +1,4 @@
+[[სურათი:Numa pompilius.jpg|thumb|ნუმა პომპილიუსი]]
 '''ნუმა პომპილიუსი''' (* [[21 აპრილი]], [[ძვ.წ. 753]] ―   †   [[ძვ.წ. 674]]) - [[რომის სამეფო|რომის]] ლეგენდარული მეორე მეფე, [[რომულუსი|რომულუსის]] შემდეგ. დაბადებით საბინელი, რომაელებმა ის მეფედ აირჩიეს რომაელთა და საბინელთა გასაერთიანებლად. მისი მეფობის პერიოდში რომაელთა და საბინელთა დიდი კულტურული ინტეგრაცია განხორციელდა. ამ პერიოდს დაემთხვა დიდი რელიგიური აღმასვლა და ორმოცწლიანი მშვიდობა. მის შემდეგ მოსული [[ტულუს ჰოსტილიუსი]] ნუმასგან რადიკალურად განსხვავებულ პოლიტიკას იჭერს, თუმცა ნუმას ბიოლოგიურმა შვილიშვილმა, რომელიც რომის მეოთხე მეფე გახდა, გააგრძელა მშვიდობისა და რელიგიური მსახურების ბაბუამისისეული პოლიტიკა.
 
 
