--- a/სიმონ_II_გურიელი.mw
+++ b/სიმონ_II_გურიელი.mw
@@ -1,4 +1,4 @@
-'''სიმონ II გურიელი''' (* [[1606]] ―   †   დაახლოებით [[1672]]), გურიის მთავარი [[1625]], [[1658]]. [[მამია II გურიელი|მამია II გურიელის]] ძე. [[1621]] წელს შეირთო [[მანუჩარ I დადიანი|მანუჩარ I დადიანის]] ასული მარიამი. [[1625]] წელს მოკლა მამა და გურიის მთავარი გახდა. იმავე წელს სოფ.ლანჩხუთთან ბრძოლაში დაამარცხა [[ლევან II დადიანი|ლევან II დადიანმა]], დააბრმავა და მისი ცოლ-შვილი ოდიშს წაიყვანა. [[1658]] იმერეთის მეფემ [[ბაგრატ III|ბაგრატ III-მ]] და დადიანმა სიმონი კვლავ მთავრის ტახტზე აიყვანეს აშვილეს გურიელთა სახლისშვილი [[დემეტრე გურიელი|დემეტრე]], რომელიც განაგებდა სამთავროს. 
+'''სიმონ II გურიელი''' (* [[1606]] ―   †   დაახლოებით [[1672]]), გურიის მთავარი [[1625]], [[1658]]. [[მამია II გურიელი|მამია II გურიელის]] ძე. [[1621]] წელს შეირთო [[მანუჩარ I დადიანი|მანუჩარ I დადიანის]] ასული მარიამი. [[1625]] წელს მოკლა მამა და გურიის მთავარი გახდა. იმავე წელს სოფ.ლანჩხუთთან ბრძოლაში დაამარცხა [[ლევან II დადიანი|ლევან II დადიანმა]], დააბრმავა და მისი ცოლ-შვილი ოდიშს წაიყვანა. [[1658]] [[იმერეთის სამეფო|იმერეთის მეფემ]] [[ბაგრატ III, ალექსანდრე II-ის ძე|ბაგრატ III-მ]] და დადიანმა სიმონი კვლავ მთავრის ტახტზე აიყვანეს აშვილეს გურიელთა სახლისშვილი [[დემეტრე გურიელი|დემეტრე]], რომელიც განაგებდა სამთავროს. 
 
 
 სიმონ II გურიელი ბერად შედგა და იერუსალიმს გაემგზავრა, სადაც აქტიურად იბრძოდა ქართული ეკლესია-მონასტრების ინტერესების დასაცავად.
