/* საბინელებთან გაერთიანება და სხვა მეზობლებთან ომი */

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -53,7 +53,7 @@
 
 რომაელებმა და საბინებმა ბევრი რამე გადაიღეს ერთმანეთისგან, სამხედრო აღჭურვილობა, კალენდარი, დღესასწაულები, რელიგია. რომულუსი რელიგიურ რიტუალების გულმოდგინედ იცავდა, ბევრი კულტის წარმოშვებას სწორედ მის სახელს უკავშირებენ.
 
-ტატიუსის მმართველობის მეხუთე წელს, მისმა მსახურებმა შენიშნეს ლავრენტიუმიდან მომავალე ელჩები და სწდეს მათთვის ფულის წართმევა, ეჩებმა წინააღმდეგობა გაუწიეს და მსახურებმა ისინი მოკლეს. როდესაც რომულუსმა შეიტყო ეს ამბავი, იგი განრისხდა და ბრძანა სიკვდილით დაესაჯა, ხოლო ტატიუსი ყოველგვარად ცდილობდა შეეცვლევნა რომულისთვის გადაწყვეტილება, მათ შორის ეს ერთადერთი ღია დაპირისპირება იყო. ელჩების ნათესავებმა რადგან ტატიუსის მიზეზით ვერ მიიღეს სამართალი, თავს დაესხნენ მას და მოკლედ, ხოლო რომულუსს თაყვანი სცეს მისი სამართლიანობის გამო. რომულუსმა ტატიუსი პატივით დაკრძალა, მაგრამ მისი მკვლელების დასჯა საჭიროდ არ ჩათვალა.
+ტატიუსის მმართველობის მეხუთე წელს, მისმა ნათესავებმა შენიშნეს ლავრენტიუმიდან მომავალე ელჩები და სწდეს მათთვის ფულის წართმევა, ეჩებმა წინააღმდეგობა გაუწიეს და ნათესავებმა ისინი მოკლეს. როდესაც რომულუსმა შეიტყო ეს ამბავი, იგი განრისხდა და ბრძანა სიკვდილით დაესაჯა, ხოლო ტატიუსი ყოველგვარად ცდილობდა შეეცვლევნა რომულისთვის გადაწყვეტილება, მათ შორის ეს ერთადერთი ღია დაპირისპირება იყო. ელჩების ნათესავებმა რადგან ტატიუსის მიზეზით ვერ მიიღეს სამართალი, თავს დაესხნენ მას და მოკლეს, ხოლო რომულუსს თაყვანი სცეს მისი სამართლიანობის გამო. რომულუსმა ტატიუსი პატივით დაკრძალა, მაგრამ მისი მკვლელების დასჯა საჭიროდ არ ჩათვალა.
 
 რომულუსმა დაუპყრო ბევრი მეზობელი ქალაქი, ზოგის მოსახლეობა რომში გადმოასახლა და დაანგრია, ხოლო ზოგ ქალაქში რომაელები ჩაასახლა.
 
