--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -19,7 +19,9 @@
 
 ==ლიტერატურა==
 
-
+* [http://ancientrome.ru/antlitr/plutarch/sgo/numa-f.htm პლუტარქე - ნუმა პომპილიუსის ბიოგრაფია (რუსულად)]
+* [http://penelope.uchicago.edu/Thayer/E/Roman/Texts/Plutarch/Lives/Numa*.html პლუტარქე - ნუმა პომპილიუსის ბიოგრაფია (ინგლისურად)]
+* [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი - რომის ისტორია (რუსულად)]
 
 <center>
 <table border=1>
