*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -10,10 +10,12 @@
 
 {{ესკიზი}}
 
+[[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 ==პოლიტიკა==
 
 {{ესკიზი}}
 
+[[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
 ==სიკვდილი==
 
 {{ესკიზი}}
