*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -1,6 +1,8 @@
 [[სურათი:Numa pompilius.jpg|thumb|ნუმა პომპილიუსი]]
 '''ნუმა პომპილიუსი''' (* [[21 აპრილი]], [[ძვ.წ. 753]] ―   †   [[ძვ.წ. 674]]) - [[რომის სამეფო|რომის]] ლეგენდარული მეორე მეფე.
 
+==ნუმა პომპილიუსის წარმოშვება==
+
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
 {{ესკიზი}}
