*Empty MediaWiki Message*

--- a/იან_ჰუსი.mw
+++ b/იან_ჰუსი.mw
@@ -6,7 +6,7 @@
 
 ჰუსი ეზიარა ინგლისელი რეფორმატორის  [[ვიკლიფი, ჯონ |ჯ. ვიკლიფის]] და ჩეხი მქადაგებლების [[მილიჩი, იან|იან მილიჩის]] და [[იანოველი, მათე|მათე იანოველის]] იდეებს. მათზე დაყრდნობით ჰუსმა შექმნა მწყობრი მოძღვრება, რომელშიც იგი მოითხოვდა საზოგადოებრივი ცხოვრების გარდაქმნას, ეკლესიის ძირეულ რეფორმას ადრინდელი ქრისტიანული ეკლესიის ყაიდაზე და საეკლესიო მიწების სეკულარიზაციას. მორწმუნეთა ქცევის ნორმად ის აცხადებდა საღმრთო წერილს. გაბატონებული კლასებისათვის ხელისუფლების შენარჩუნების უმთავრესი პირობა უნდა ყოფილიყო "საღმრთო სჯულის" დაცვა. ამ უზენაესი ნორმის დარღვევა მათ ქვეშევრდომებს ათავისუფლებდა მორჩილებისაგან. ამ დებულებიდან შემდგომში ტაბორიტებმა პრაქტიკული რევოლუციური დასკვნები გამოიტანეს.
 
-[[1410]] პაპმა შეაჩვენა ჰუსი. [[1412]] ჰუსმა გაილაშქრა ინდულგენციებით ვაჭრობის წინააღმდეგ, რისთვისაც პრაღა დაატოვებინეს. სამხრეთ ჩეხიაში ჰუსმა 2 წელი იცხოვრა. აქ დაასრულა მან თავისი ტრაქტატი "ეკლესიის შესახებ"([[1413]]) და [[ბიბლია|ბიბლიის]] ჩეხური თარგმანი, აქვე შექმნა ჩეხური ენის ორთოგრაფია. [[1414]] ჰუსი გამოიძახეს კონსტანცის საეკლესიო კრებაზე. მიუხედავად იმპერატორ სიგიზმუნდის მიერ ნაბოძები შეუვალობის სიგელისა, კონსტსნცაში ჩასული ჰუსი დააპატიმრეს [[1414]] წლის 28 ოქტომბერს, ხოლო [[1415]], როგორც უტეხი ერეტიკოსი - კოცონზე დაწვეს. ჰუსის მოწამებრივმა სიკვდილმა დააჩქარა ჩეხიაში რევოლიციური მოძრაობა, რომელსაც მისივე რეფორმისტული იდეები ედო საფუძვლად([[ჰუსისტური ომები]][[ 1419]]-[[1437]]).
+[[1410]] პაპმა შეაჩვენა ჰუსი. [[1412]] ჰუსმა გაილაშქრა ინდულგენციებით ვაჭრობის წინააღმდეგ, რისთვისაც პრაღა დაატოვებინეს. სამხრეთ ჩეხეთში ჰუსმა 2 წელი იცხოვრა. აქ დაასრულა მან თავისი ტრაქტატი "ეკლესიის შესახებ"([[1413]]) და [[ბიბლია|ბიბლიის]] ჩეხური თარგმანი, აქვე შექმნა ჩეხური ენის ორთოგრაფია. [[1414]] ჰუსი გამოიძახეს კონსტანცის საეკლესიო კრებაზე. მიუხედავად იმპერატორ სიგიზმუნდის მიერ ნაბოძები შეუვალობის სიგელისა, კონსტანცაში ჩასული ჰუსი დააპატიმრეს [[1414]] წლის 28 ოქტომბერს, ხოლო [[1415]], როგორც უტეხი ერეტიკოსი - კოცონზე დაწვეს. ჰუსის მოწამებრივმა სიკვდილმა დააჩქარა ჩეხეთში რევოლიციური მოძრაობა, რომელსაც მისივე რეფორმისტული იდეები ედო საფუძვლად([[ჰუსისტური ომები]][[ 1419]]-[[1437]]).
 
 [[კატეგორია:ჩეხები]]
 [[კატეგორია:ერეტიკოსად შერაცხულნი]]
