--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -3,6 +3,8 @@
 
 ==ნუმა პომპილიუსის წარმოშვება==
 
+ნუმა პომპილიუსი წარმოშვებით საბინელი იყო. მისი დაბადების დრო და ადგილი უცნობია. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორე|პითაგორეს]] მოსწავლე იყო, მაგრამ პითაგორე ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
+
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
 {{ესკიზი}}
