/* ნუმას მეფედ არჩევის წინაპირობები */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -7,9 +7,12 @@
 
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
-{{ესკიზი}}
+[[რომულუსი|რომულუსის]] უცნაური სიკვდილის შემდეგ რომში მეფობის კანდიდატი არ იყო, საბინელი და რომაელი სენატორები ვერ თანხვდებოდნენ თუ ვინ უნდა ყოფილიყო რომის მეფე. ერთმანეთის კანდიდატებს კი არ სცნობდნენ. ეს იმით დასრულდა რომ ასი სენატორი ათ-ათ კაციან დაჯგუფებებად გაიყო, თითო დაჯგუფებამ აირჩია მეფე და 5 დღის ვადით მეფობდა ერთი მეფე, შემდეგ კი მეფე მეორე ჯგუფის წარმომადგენელი ხდებოდა. ასე გაგრძელდა დაახლოვებით ერთი წელი. 
+
+უბრალო ხალხს ეს არ მოეწონა, ერთი ბატონის მაგივრად მათ ასი ბატონი მიიღეს 
 
 [[სურათი:Numa-pompilius.jpg|thumb|left|ნუმა მუზებს სთხოვს რჩევას]]
+
 ==ნუმას გამეფება==
 
 {{ესკიზი}}
