--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -14,9 +14,10 @@
 
 ==ნუმას გამეფება==
 
-{{ესკიზი}}
+როდესაც ნუმა რომში ჩამოვიდა, ავგურმა აცნობა ერს რომ ღმერთებს სურთ ნუმას გამეფება და რომის მოსახლეობამ იგი სიხარულით სცნო მეფედ. ნუმას მიაჩნდა რომ რომაელი მეომრები კანონიერებისთვის და ადათწესებისთვის მიეჩვია. მან ააგი ღმერთი [[იანუსი|იანუსის]] ტაძარი, ერომელიც 
 
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
+
 ==პოლიტიკა==
 
 {{ესკიზი}}
