--- a/აბაზ_ბაკურიანის_ძე.mw
+++ b/აბაზ_ბაკურიანის_ძე.mw
@@ -1,4 +1,4 @@
-აბაზ ბაკურიანის ძე,  XI საუკუნის [[ქართველები | ქართველი]] მოღვაწე, [[ბიზანტია | ბიზანტიის]] იმპერიის მაგისტროსი, ძმა [[გრიგოლ ბაკურიანის ძე | გრიგოლ ბაკურიანის ძისა]]. მსახურობდა ბიზანტიის სხვადასხვა პროვინციებში. ჯერ ანტიოქიაში ჰქონდა მამულები, შემდეგ მათ სანაცვლოდ თესალონიკესა და სერეს თემებში მიიღო სოფლები, რომლებიც მისი ანდერძის თანახმად გრიგოლმა [[პეტრიწონის მონასტერი | პეტრიწონის]] ქართველთა მონასტერს გადასცა. ამის გამო აბაზ ბაკურიანის ძე ამ მონასტრის სიკვდილშემდგომ [[ქტიტორი | ქტიტორად]] ითვლებოდა. დიდ მზრუნველობად იჩენდა [[ათონის ივერთა მონასტრი | ათონის ივერთა მონასტრის]] ქონებრივ კეთილდღეობაზეც.
+აბაზ ბაკურიანის ძე,  XI საუკუნის [[ქართველები | ქართველი]] მოღვაწე, [[ბიზანტია | ბიზანტიის]] იმპერიის მაგისტროსი, ძმა [[გრიგოლ ბაკურიანის ძე | გრიგოლ ბაკურიანის ძისა]]. მსახურობდა ბიზანტიის სხვადასხვა პროვინციებში. ჯერ ანტიოქიაში ჰქონდა მამულები, შემდეგ მათ სანაცვლოდ თესალონიკესა და სერეს თემებში მიიღო სოფლები, რომლებიც მისი ანდერძის თანახმად გრიგოლმა [[პეტრიწონის მონასტერი | პეტრიწონის]] ქართველთა მონასტერს გადასცა. ამის გამო აბაზ ბაკურიანის ძე ამ მონასტრის სიკვდილშემდგომ [[ქტიტორი | ქტიტორად]] ითვლებოდა. დიდ მზრუნველობას იჩენდა [[ათონის ივერთა მონასტრი | ათონის ივერთა მონასტრის]] ქონებრივ კეთილდღეობაზეც.
 
 
 
