/* ნუმა პომპილიუსის წარმოშვება */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -6,6 +6,8 @@
 ნუმა პომპილიუსი წარმოშვებით საბინელი იყო ქალაქ კუროსიდან. როგორ პლუტარქე ვგაუწყებს, იგი რომის დაარსების დღეს დაიბადა. მამამისს პომპონიუსს ოთხი ვაჟი ჰყავდა, ნუმა უმცროსი იყო. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორე|პითაგორეს]] მოსწავლე იყო, მაგრამ პითაგორე ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
 [[სურათი:Numa-pompilius.jpg|thumb|left|ნუმა მუზებს სთხოვს რჩევას]]
 
+მის ზნეობრივ პრინციპებზე რომულუსის თანამმართველმა [[ტატიუსი|ტატიუსმაც]] შეიტყო და მიათხოვა ნუმას ერთადერთი ქალიშვილი. მიუხედავად ამისა, იგი არ გადასახლდა რომში, რადგან მშვიდი ცხოვრება ერჩივნა. დაქორწინებიდაც 13 წლის შემდეგ ტატია გარდაიცვალა.
+
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
 [[რომულუსი|რომულუსის]] უცნაური სიკვდილის შემდეგ რომში მეფობის კანდიდატი არ იყო, საბინელი და რომაელი სენატორები ვერ თანხვდებოდნენ თუ ვინ უნდა ყოფილიყო რომის მეფე. ერთმანეთის კანდიდატებს კი არ სცნობდნენ. ეს იმით დასრულდა რომ ასი სენატორი ათ-ათ კაციან დაჯგუფებებად გაიყო, თითო დაჯგუფებამ აირჩია მეფე და 5 დღის ვადით მეფობდა ერთი მეფე, შემდეგ კი მეფე მეორე ჯგუფის წარმომადგენელი ხდებოდა. ასე გაგრძელდა დაახლოვებით ერთი წელი. 
