--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -16,7 +16,7 @@
 
 ==ნუმას გამეფება==
 
-როდესაც ნუმა რომში ჩამოვიდა, ავგურმა აცნობა ერს რომ ღმერთებს სურთ ნუმას გამეფება და რომის მოსახლეობამ იგი სიხარულით სცნო მეფედ. ნუმას მიაჩნდა რომ რომაელი მეომრები კანონიერებისთვის და ადათწესებისთვის მიეჩვია. მან ააგი ღმერთი [[იანუსი|იანუსის]] ტაძარი, ერომელიც 
+როდესაც ნუმა რომში ჩამოვიდა, ავგურმა აცნობა ერს რომ ღმერთებს სურთ ნუმას გამეფება და რომის მოსახლეობამ იგი სიხარულით სცნო მეფედ. ნუმას მიაჩნდა რომ რომაელი მეომრები კანონიერებისთვის და ადათწესებისთვის მიეჩვია. მან ააგი ღმერთი [[იანუსი|იანუსის]] ტაძარი
 
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 
