/* ნუმა პომპილიუსის წარმოშვება */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -8,6 +8,10 @@
 
 მის ზნეობრივ პრინციპებზე რომულუსის თანამმართველმა [[ტატიუსი|ტატიუსმაც]] შეიტყო და მიათხოვა ნუმას ერთადერთი ქალიშვილი. მიუხედავად ამისა, იგი არ გადასახლდა რომში, რადგან მშვიდი ცხოვრება ერჩივნა. დაქორწინებიდაც 13 წლის შემდეგ ტატია გარდაიცვალა.
 
+დაქვრივების შემდეგ ნუმამ დატოვა ქალაქი და წმინდა ტყეში დასახლდა. ჭორები დადიოდა რომ იგი მუზას შეუყვარდა და იქ ერთად ცხოვრობდნენ. 
+
+ნუმა უკვე ორმოცი წლის იყო, როდესაც რომიდან ელჩები მოვიდნენ მასთან და მეფობა შესთავაზეს.
+
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
 [[რომულუსი|რომულუსის]] უცნაური სიკვდილის შემდეგ რომში მეფობის კანდიდატი არ იყო, საბინელი და რომაელი სენატორები ვერ თანხვდებოდნენ თუ ვინ უნდა ყოფილიყო რომის მეფე. ერთმანეთის კანდიდატებს კი არ სცნობდნენ. ეს იმით დასრულდა რომ ასი სენატორი ათ-ათ კაციან დაჯგუფებებად გაიყო, თითო დაჯგუფებამ აირჩია მეფე და 5 დღის ვადით მეფობდა ერთი მეფე, შემდეგ კი მეფე მეორე ჯგუფის წარმომადგენელი ხდებოდა. ასე გაგრძელდა დაახლოვებით ერთი წელი. 
