/* ნუმა პომპილიუსის წარმოშვება */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -10,7 +10,7 @@
 
 დაქვრივების შემდეგ ნუმამ დატოვა ქალაქი და წმინდა ტყეში დასახლდა. ჭორები დადიოდა რომ იგი მუზას შეუყვარდა და იქ ერთად ცხოვრობდნენ. 
 
-ნუმა უკვე ორმოცი წლის იყო, როდესაც რომიდან ელჩები მოვიდნენ მასთან და მეფობა შესთავაზეს.
+ნუმა უკვე ორმოცი წლის იყო, როდესაც რომიდან ელჩები მოვიდნენ მასთან და მეფობა შესთავაზეს. ნუმა ჯერ არ თანხვდებოდა მეფობაზე, მიაჩნდა რომ იგი არ შეეფერებოდა მეომარ ერს. მაგრამ ელჩებმა მოახერხეს მისი დარწმუნება და ნუმა დათანხვდა.
 
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
