--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -20,7 +20,7 @@
 
 ==ნუმას გამეფება==
 
-როდესაც ნუმა რომში ჩამოვიდა, ავგურმა აცნობა ერს რომ ღმერთებს სურთ ნუმას გამეფება და რომის მოსახლეობამ იგი სიხარულით სცნო მეფედ. ნუმას მიაჩნდა რომ რომაელი მეომრები კანონიერებისთვის და ადათწესებისთვის მიეჩვია. მან ააგი ღმერთი [[იანუსი|იანუსის]] ტაძარი
+როდესაც ნუმა რომში ჩამოვიდა, ფორუმზე მოაწყეს კენჭისყრა და ნუმა ერთხმად იქნა არჩეული, მაგრამ ახალი მეფე ამით არ დაკმაყოფილდა, იგი ავიდა კაპიტოლიუმზე და ავგურს სთხოვა ემკითხავა ფრინველების გაფრენით. მკითხაობით დადასტურდა ხალხის არჩევანის მართებულობა და ნუმა გახდა მეფე.
 
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 
