--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -22,6 +22,8 @@
 
 როდესაც ნუმა რომში ჩამოვიდა, ფორუმზე მოაწყეს კენჭისყრა და ნუმა ერთხმად იქნა არჩეული, მაგრამ ახალი მეფე ამით არ დაკმაყოფილდა, იგი ავიდა კაპიტოლიუმზე და ავგურს სთხოვა ემკითხავა ფრინველების გაფრენით. მკითხაობით დადასტურდა ხალხის არჩევანის მართებულობა და ნუმა გახდა მეფე.
 
+გამეფების შემდეგ ნუმამ პირველი რაც ჰქნა, დაითხოვა 300 მცველის რაზმი. მას მიაჩნდა რომ სრულიად შეუძლია ენდოს ხალხს, რომელმაც იგი აირჩია.
+
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 
 ==პოლიტიკა==
