*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -18,7 +18,7 @@
 
 უბრალო ხალხს ეს არ მოეწონა, ერთი ბატონის მაგივრად მათ ასი ბატონი მიიღეს. ხალხმა განაცხადა რომ აწი მეფის გარდა არავის აღარ დაემორჩილებოდნენ, ამიტომ სენატორებმა გადაწყვიტეს შეკრება რათა აერჩიათ მეფე. საბინელებმა ნუმა პომპილიუსის კანდიდატურა წამოაყენეს. ნუმა ცნობილი იყო არა მარტო მაღალი მორალური თვისებებით, არამედ საღვთო და საერო კანონებში განსწავლულობით. რომაელებმა ნუმას კანდინატურას ვერავინ ვერ დაუპირისპირეს და დათანხვდნენ.
 
-==ნუმას გამეფება==
+==ნუმას მმართველობა==
 
 როდესაც ნუმა რომში ჩამოვიდა, ფორუმზე მოაწყეს კენჭისყრა და ნუმა ერთხმად იქნა არჩეული, მაგრამ ახალი მეფე ამით არ დაკმაყოფილდა, იგი ავიდა კაპიტოლიუმზე და ავგურს სთხოვა ემკითხავა ფრინველების გაფრენით. მკითხაობით დადასტურდა ხალხის არჩევანის მართებულობა და ნუმა გახდა მეფე.
 
@@ -26,9 +26,6 @@
 
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 
-==პოლიტიკა==
-
-{{ესკიზი}}
 
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
 ==სიკვდილი==
