--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -25,7 +25,7 @@
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 გამეფების შემდეგ ნუმამ პირველი რაც ჰქნა, დაითხოვა 300 მცველის რაზმი. მას მიაჩნდა რომ სრულიად შეუძლია ენდოს ხალხს, რომელმაც იგი აირჩია.
 
-
+ამის შემდეგ მან განიძრახა მოელბო რომაელთა რკინის ხასიათი და მიეჩვია ისინი სამართლიანობისთვის, ღვთისმსახურებისთვის და მოწყალებისთვის. ნუმამ იცოდა რომ ეს არ იყო ადვილი ამოცანა, რადგან ახალი ერი ომებში აღმოცენდა და მშვიდობა მათთვის უცხო იყო. ამისთვის მან დააწესა მრავალი რელიგიური დღესასწაული და თვითონ ხელმძღვანელობდა მსხვერპლთშეწირვებს და სხვა რიტუალებს. 
 
 
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
