--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -27,8 +27,7 @@
 
 ამის შემდეგ მან განიძრახა მოელბო რომაელთა რკინის ხასიათი და მიეჩვია ისინი სამართლიანობისთვის, ღვთისმსახურებისთვის და მოწყალებისთვის. ნუმამ იცოდა რომ ეს არ იყო ადვილი ამოცანა, რადგან ახალი ერი ომებში აღმოცენდა და მშვიდობა მათთვის უცხო იყო. ამისთვის მან დააწესა მრავალი რელიგიური დღესასწაული და თვითონ ხელმძღვანელობდა მსხვერპლთშეწირვებს და სხვა რიტუალებს. 
 
-ნუმამ ააგო ღმერთი [[იანუსი|იანუსის]] ტაძარი, რომლის კარიბჭე იღებოდა მხოლოდ ომის დროს და ომის დასრულებისთანახე იხურებოდა. ნუმას მეფობისას კარიბჭე დახურული იყო, ხოლო მისი გარდცვალების შემდეგ ტიტუს ლივიუსის ცნობების იგი მხოლოდ ორჯერ დაიხურა, პირველად [[პირველი პუნიკური ომი|პირველი პუნიკური ომის]] შემდეგ და მეორედ [[აკციუსის ბრძოლა|აკციუსის ბრძოლის]] შემდეგ.
-
+ნუმამ ააგო ღმერთი [[იანუსი|იანუსის]] ტაძარი, რომლის კარიბჭე იღებოდა მხოლოდ ომის დროს და ომის დასრულებისთანახე იხურებოდა. ნუმამ მეზობლბთან მშვიდობა დაამყარა და საზეიმოდ ჩაკეტა ტაძრის კარიბჭე. 
 
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
 
