--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -32,6 +32,8 @@
 
 ამის შემდეგ ნუმამ უმაღლესი ქურუმების თანამდებობა შექმნა, მათ პონტიფიკუსები ეწოდებოდათ. მეფეც პონტიფიკუსი იყო. პონტიფიკუსები ემსახურებოდნენ [[იუპიტერი|იუპიტერს]], [[მარსი|მარსს]] და [[რომულუსი|რომულუსის]] კულტებს. მან ასევე დააწესა წმინდა ცეცხლის შენახვის კულტი, წმინდა ცეცხლზე ზრუნვა ვესტას ქალწულ ქურუმებს ევალებოდათ.
 
+ვესტას ქალწულები ბევრი პრივილეგით სარგებლობდნენ, თუ გზად მათ შემთხვევით სიკვდილმისჯილი შეხვდებოდათ, მაშინ განაჩენი სისრულეში აღარ მოჰყავდათ. თუ ქალწული რამეს დააშავებდა მას პონტიფიკუსი სჯიდა, ხოლო თუ იგი ქალწულობას დაკარგავდა, მას ცოცხლად მარხავდნენ.
+
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
 
 ==სიკვდილი==
