--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -34,6 +34,8 @@
 
 ვესტას ქალწულები ბევრი პრივილეგით სარგებლობდნენ, თუ გზად მათ შემთხვევით სიკვდილმისჯილი შეხვდებოდათ, მაშინ განაჩენი სისრულეში აღარ მოჰყავდათ. თუ ქალწული რამეს დააშავებდა მას პონტიფიკუსი სჯიდა, ხოლო თუ იგი ქალწულობას დაკარგავდა, მას ცოცხლად მარხავდნენ.
 
+პონტიფიკუსების მოვალეობაში ასევე შედიოდა დაკრძალვის რიტუალების შესრულება, ამის გარდა ისინი ხალხს უნდა დახმარებოდნენ და ესწავლებინათ სხვადასხვა რიყუალების ჩატარება.
+
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
 
 ==სიკვდილი==
