/* ამ დღეს დაბადებულნი */

--- a/21_აპრილი.mw
+++ b/21_აპრილი.mw
@@ -9,6 +9,7 @@
 *[[1967]] : [[საბერძნეთი|საბერძნეთში]] მოხდა სამხედრო გადატრიალება.
 
 ==ამ დღეს დაბადებულნი==
+*[[ძვ. წ. 753]] : [[ნუმა პომპილიუსი]] - რომის მეორე მეფე
 *[[1488]] : [[ჰუტენი, ულრიხ ფონ]] - გერმნელი ჰუმანისტი, მწერალი
 *[[1729]] : [[ეკატერინე II დიდი]] - რუსეთის ცარიცა
 *[[1816]] : [[ბრონტე, შარლოტა]] - ინგლისელი მწერალი
@@ -16,7 +17,6 @@
 *[[1912]] : [[კამიუ, მარსელ]] - ფრანგი კინორეჟისორი
 *[[1915]] : [[ქუინი, ენტონი]] - ამერიკელი მსახიობი
 *[[1926]] : [[ელისაბედ II]] - [[დიდი ბრიტანეთი|ბრიტანეთის]] დედოფალი
-
 
 ==ამ დღეს გარდაცვლილნი==
 
