*Empty MediaWiki Message*

--- a/ძვ._წ._753.mw
+++ b/ძვ._წ._753.mw
@@ -6,10 +6,10 @@
 * დაარსდა [[რომის_იმპერია|რომი]]
 
 ==დაიბადნენ==
-
+* [[21 აპრილი]] [[ნუმა პომპილიუსი]] - რომის მეორე მეფე
 
 ==გარდაიცვალნენ==
-* [[რომულუსი|რემუსი]], რომულუსის ძმა.
+* [[21 აპრილი]] [[რომულუსი|რემუსი]], რომულუსის ძმა.
 
 
 [[კატეგორია:ძვ. წ. 753|*]]
