--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -34,9 +34,11 @@
 
 ვესტას ქალწულები ბევრი პრივილეგით სარგებლობდნენ, თუ გზად მათ შემთხვევით სიკვდილმისჯილი შეხვდებოდათ, მაშინ განაჩენი სისრულეში აღარ მოჰყავდათ. თუ ქალწული რამეს დააშავებდა მას პონტიფიკუსი სჯიდა, ხოლო თუ იგი ქალწულობას დაკარგავდა, მას ცოცხლად მარხავდნენ.
 
-პონტიფიკუსების მოვალეობაში ასევე შედიოდა დაკრძალვის რიტუალების შესრულება, ამის გარდა ისინი ხალხს უნდა დახმარებოდნენ და ესწავლებინათ სხვადასხვა რიყუალების ჩატარება.
+პონტიფიკუსების მოვალეობაში ასევე შედიოდა დაკრძალვის რიტუალების შესრულება, ამის გარდა ისინი ხალხს უნდა დახმარებოდნენ და ესწავლებინათ სხვადასხვა რიტუალების ჩატარება.
 
 [[სურათი:Numa painting.jpg|thumb|left|ნუმა პომპილიუსი ხალხში]]
+
+ნუმას მიერ მიღებულმა ზომებმა გაამართლა, ხალხი უკვე არა ომებზე, არამედ ღვთისმსახურებაზე ფიქრობდა, მეზობლების აზრიც შეიცვალა რომზე, ადრე თუ რომს მათ დასაღუპად აღმართულ სამხედრო ბანაკად აღიქვამდნენ და არა ქალაქად, ახლა უკვე შეიცვალეს აზრი და სამარცხვინოდ მიაჩნდათ ევნოთ ასეთი ღვთისმოსავი ერისთვის.
 
 ==სიკვდილი==
 
