--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -40,6 +40,8 @@
 
 ნუმას მიერ მიღებულმა ზომებმა გაამართლა, ხალხი უკვე არა ომებზე, არამედ ღვთისმსახურებაზე ფიქრობდა, მეზობლების აზრიც შეიცვალა რომზე, ადრე თუ რომს მათ დასაღუპად აღმართულ სამხედრო ბანაკად აღიქვამდნენ და არა ქალაქად, ახლა უკვე შეიცვალეს აზრი და სამარცხვინოდ მიაჩნდათ ევნოთ ასეთი ღვთისმოსავი ერისთვის.
 
+მეფემ ვესტას ტაძართან აიგო სასახლე. ნუმას მეორე მიზანი იყო ბოლომდე შეერწყა საბინელები და რომაელები, ამ დროს ქალაქი თითქოს და ორად იყო გაყოფილი. ამ სხვაობის გასაქრობად ნუმამ დაყო ერი მათი საქმიანობის მიხედვით. მან შექმნა ფლეიტისტთა, ოქრომჭედელთა, დურგალთა, მღებავთა, მეწაღეთა და სხვა ცეხები, ყოველი ცეხისთვის დანიშნა შეკრების დღეები და ყველას დაუწესა პროფესიული დღესასწაულები.
+
 ==სიკვდილი==
 
 {{ესკიზი}}
