--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -28,7 +28,7 @@
 ამის შემდეგ მან განიძრახა მოელბო რომაელთა რკინის ხასიათი და მიეჩვია ისინი სამართლიანობისთვის, ღვთისმსახურებისთვის და მოწყალებისთვის. ნუმამ იცოდა რომ ეს არ იყო ადვილი ამოცანა, რადგან ახალი ერი ომებში აღმოცენდა და მშვიდობა მათთვის უცხო იყო. ამისთვის მან დააწესა მრავალი რელიგიური დღესასწაული და თვითონ ხელმძღვანელობდა მსხვერპლთშეწირვებს და სხვა რიტუალებს. 
 
 ნუმამ ააგო ღმერთი [[იანუსი|იანუსის]] ტაძარი, რომლის კარიბჭე იღებოდა მხოლოდ ომის დროს და ომის დასრულებისთანახე იხურებოდა. ნუმამ მეზობლბთან მშვიდობა დაამყარა და საზეიმოდ ჩაკეტა ტაძრის კარიბჭე. 
-ნუმან შექნა მთვარის კალენდარი, წელიწადი დაყო თორმეტ თვეთ, ვინაიდან მთვარის ვთვეში 30 დღე არაა და წლის შესრულებამდე აკლდებოდა 11 დღე, მან ჩაამატა დამატებითი თვე.
+ნუმან შექნა [[მთვარის კალენდარი]], წელიწადი დაყო თორმეტ თვეთ, ვინაიდან მთვარის ვთვეში 30 დღე არაა და წლის შესრულებამდე აკლდებოდა 11 დღე, მან ჩაამატა დამატებითი თვე. წელიწადი 1 მარტს იწყებოდა.
 
 ამის შემდეგ ნუმამ უმაღლესი ქურუმების თანამდებობა შექმნა, მათ პონტიფიკუსები ეწოდებოდათ. მეფეც პონტიფიკუსი იყო. პონტიფიკუსები ემსახურებოდნენ [[იუპიტერი|იუპიტერს]], [[მარსი|მარსს]] და [[რომულუსი|რომულუსის]] კულტებს. მან ასევე დააწესა წმინდა ცეცხლის შენახვის კულტი, წმინდა ცეცხლზე ზრუნვა ვესტას ქალწულ ქურუმებს ევალებოდათ.
 
