--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -43,6 +43,8 @@
 
 მეფემ ვესტას ტაძართან აიგო სასახლე. ნუმას მეორე მიზანი იყო ბოლომდე შეერწყა საბინელები და რომაელები, ამ დროს ქალაქი თითქოს და ორად იყო გაყოფილი. ამ სხვაობის გასაქრობად ნუმამ დაყო ერი მათი საქმიანობის მიხედვით. მან შექმნა ფლეიტისტთა, ოქრომჭედელთა, დურგალთა, მღებავთა, მეწაღეთა და სხვა ცეხები, ყოველი ცეხისთვის დანიშნა შეკრების დღეები და ყველას დაუწესა პროფესიული დღესასწაულები.
 
+ნუმას ქორწინებასა და შვილებზე ისტორიკოსების აზრები განსხვავდება. ზოგი მიიჩნევს რომ იგი მხოლოდ ერთხელ იყო დაქორწინებული და ერთადერთი ქალიშვილი პომპილია ჰყავდა, სხვებს მიაჩნიათ რომ მას კიდევ ოთხი ვაჟი ჰყავდა, მესამენი კი უარყოფენ მეორეთა აზრს და ამტკიცებენ რომ პომპილია ნუმას მეორე ქორწინებისგან დაიბადა, როდესაც ეს უკანასკნელი უკვე რომის მეფე იყო. ყოველ შემთხვევაში პომპილია გათხოვილი იყო მარციუსზე და მისი ვაჟი ანკუს მარციუსი რომის მეოთხე მეფე გახდა.
+
 ==სიკვდილი==
 
 {{ესკიზი}}
