--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -47,7 +47,9 @@
 
 ==სიკვდილი==
 
-{{ესკიზი}}
+ნუმა პომპილიუსმა 43 წელი იმეფა და ღრმად მოხუცებული გარდაიცვალა. მის დასაფლავებაზე შეიკრიბნენ არა მარტო რომაელები, არამედ მეზობელი ქალაქებიდან მოსახლეობა. ისეთი გლოვა და მოთქმა იყო, თითქოს არა მოხუც მეფეს კრძძალავდნენ, არამედ ახალგაზრდა ახლობელს. იგი არ დაწვეს, როგორც ეს რომში იყო მიღებული, არამედ დაკრძალეს ქვის კუბოში, მეორე კუბოში კი მის მიერ დაწერილი წმინდა წიგნები დაკრძალეს, ასეთი იყო ნუმას სურვილი.
+
+ამგვარად რომი განადიდა მისმა ორივე პირველმა მეფემ, რომულუსმა დაპყრობებით, ნუმამ კი მშვიდობით და ღვთისმოსაობით. მუნას დიდებას ხელი მის შემდეგ მეფეების უბედურებამაც შეუწყო ხელი. ნუმას სიკვდილის შემდეგ რომის ტახტზე ხუთი მეფე ავიდა, უკანასკნელი კი განდევნეს და მეფობის მმართველობა რომში ამით დასრულდა.
 
 ==ლიტერატურა==
 
