*Empty MediaWiki Message*

--- a/რომულუსი_და_რემუსი.mw
+++ b/რომულუსი_და_რემუსი.mw
@@ -67,8 +67,8 @@
 
 ითვლება რომ რომულუსი 54 წლის ასაკში, მეფობის 38 წელს გაქრა.
 
-==შენიშვნები==
-* სტატია დაწერილია [[პლუტარქე|პლუტარქეს]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის მიხედვით.
+==შენიშვნა==
+* სტატია დაწერილია [[პლუტარქე|პლუტარქეს]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის და ტიტუს ლივიუსის "რომის ისტორია დასაბამიდან" მიხედვით.
 
 ==რესურსები ინტერნეტში==
 
