*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -51,6 +51,9 @@
 
 ამგვარად რომი განადიდა მისმა ორივე პირველმა მეფემ, რომულუსმა დაპყრობებით, ნუმამ კი მშვიდობით და ღვთისმოსაობით. მუნას დიდებას ხელი მის შემდეგ მეფეების უბედურებამაც შეუწყო ხელი. ნუმას სიკვდილის შემდეგ რომის ტახტზე ხუთი მეფე ავიდა, უკანასკნელი კი განდევნეს და მეფობის მმართველობა რომში ამით დასრულდა.
 
+==შენიშვნა==
+* სტატია დაწერილია [[პლუტარქე|პლუტარქეს]] შედარებითი ბიოგრაფიების რომულუსუის ბიოგრაფიის და ტიტუს ლივიუსის "რომის ისტორია დასაბამიდან" მიხედვით.
+
 ==ლიტერატურა==
 
 * [http://ancientrome.ru/antlitr/plutarch/sgo/numa-f.htm პლუტარქე - ნუმა პომპილიუსის ბიოგრაფია (რუსულად)]
