*Empty MediaWiki Message*

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -72,6 +72,7 @@
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
 [[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:დაბადებული ძვ. წ. 753]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 674]]
 
 [[bg:Нума Помпилий]]
