--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -1,1 +1,6 @@
 '''ტულუს ჰოსტილიუსი''' ''(Tullus Hostilius)'' - რომის მესამე მეფე. ([[ძვ. წ. 710]] † [[ძვ. წ. 640]])
+
+==წარმოშვება და მეფედ არჩევა==
+
+
+==მმართველობა==
