*Empty MediaWiki Message*

--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -1,6 +1,20 @@
-'''ტულუს ჰოსტილიუსი''' ''(Tullus Hostilius)'' - რომის მესამე მეფე. ([[ძვ. წ. 710]] † [[ძვ. წ. 640]])
+'''ტულუს ჰოსტილიუსი''' ''(Tullus Hostilius)'' - რომის მესამე მეფე. ([[ძვ. წ. 710]] † [[ძვ. წ. 641]])
 
 ==წარმოშვება და მეფედ არჩევა==
 
 
 ==მმართველობა==
+
+<center>
+<table border=1>
+<tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr align="center"><td>[[ნუმა პომპილიუსი]]</td><td>[[ძვ. წ. 673]]-[[ძვ. წ. 641]]</td><td>[[ანკუს მარციუსი]]</td></tr>
+</table>
+</center>
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის მეფეები]]
+[[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:დაბადებული ძვ. წ. 710]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 641]]
