--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -5,6 +5,10 @@
 
 ==მმართველობა==
 
+==წყაროები==
+
+[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
+
 <center>
 <table border=1>
 <tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
