/* წარმოშვება და მეფედ არჩევა */

--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -2,6 +2,7 @@
 
 ==წარმოშვება და მეფედ არჩევა==
 
+ტულუს ჰოსტილიუსის ბაბუა [[რომულუსი|რომულუსის]] თანამებრძოლი იყო და დაიღუპა საბინებთან ბრზოლაში, როდესაც ისინი რომში შევიდნენ.
 
 ==მმართველობა==
 
