/* წარმოშვება და მეფედ არჩევა */

--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -2,7 +2,7 @@
 
 ==წარმოშვება და მეფედ არჩევა==
 
-ტულუს ჰოსტილიუსის ბაბუა [[რომულუსი|რომულუსის]] თანამებრძოლი იყო და დაიღუპა საბინებთან ბრზოლაში, როდესაც ისინი რომში შევიდნენ.
+ტულუს ჰოსტილიუსის ბაბუა [[რომულუსი|რომულუსის]] თანამებრძოლი იყო და დაიღუპა საბინებთან ბრძოლაში, როდესაც ისინი რომში შევიდნენ. ხასიათით იგი თავის მეომარ ბაბუას და რომულუსს ჰგავდა. [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] სიკვდილის შემდეგ სახალხო კრებამ იგი აირჩია მეფედ.
 
 ==მმართველობა==
 
