*Empty MediaWiki Message*

--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -24,3 +24,19 @@
 [[კატეგორია:რომაული მითოლოგია]]
 [[კატეგორია:დაბადებული ძვ. წ. 710]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 641]]
+
+
+[[bg:Тул Хостилий]]
+[[de:Tullus Hostilius]]
+[[en:Tullus_Hostilius]]
+[[es:Tulio Hostilio]]
+[[fr:Tullus Hostilius]]
+[[hr:Tul Hostilije]]
+[[it:Tullo Ostilio]]
+[[he:טולוס הוסטיליוס]]
+[[la:Tullus Hostilius]]
+[[nl:Tullus Hostilius]]
+[[pt:Túlio Hostílio]]
+[[ru:Тулл Гостилий]]
+[[fi:Tullus Hostilius]]
+[[sv:Tullus Hostilius]]
