--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -6,6 +6,10 @@
 
 ==მმართველობა==
 
+ახალ მეფეს მიაჩნდა რომ ხანგძლივი მშვიდობის პერიოდი ხელს არ უწყობს რომაელთა საბრძოლო შემართებას, ამიტომ მან გადაწყვიდა [[ალბა ლონგა|ალბა ლონგასთან]] ომის დაწყება. მიზეზი მარტივი იყო, დრო და დრო ალბა ლონგელი და რომაელი მწყემსები ერთმანეთს პარავდნენ საქონელს. ორივე მეფემ ერთდროულად გააგზანა ერთმანეთთან ელჩები, რათა ზარალის ანაზღაურება მოეთხოვათ, ხოლო უარის შემთხვევაში ომი უნდა დაეწყოთ. ტულუსმა თავის ელჩებს უბრძანა ყურადღება არ გაეფანტათ, პირდაპირ მისულიყვნენ მეფესთან და განეცხადებინათ მისთვის პრეტენზიები, უარის შემთხვევაში კი ომი გამოეცხადებინათ და მაშინვე უკან დაბრუნებულიყვნენ. ელჩები სწორედ ასე მოიქცნენ.
+
+ხოლო ალბა ლონგელი ელჩები მეფემ კარგად მიიღო, გამართა ნადიმები და იქამდე არ ათქმევინა სათქმელი სანამ მისი ელჩები არ დაბრუნდნენ. ამის შემდეგ მან დაიბარა ალბა ლონგელი ელჩები და ათქმევინა მათი პრეტენზიები, როდესაც ჩამოსულებმ სიტყვა დაასრულეს, ტულუსმა განუცხადა რომ მისი ელჩები პირველები მივიდნენ ალბა ლონგას მეფესთან და მან ომი უკვე გამოაცხადა.
+
 ==წყაროები==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
