--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -10,6 +10,8 @@
 
 ხოლო ალბა ლონგელი ელჩები მეფემ კარგად მიიღო, გამართა ნადიმები და იქამდე არ ათქმევინა სათქმელი სანამ მისი ელჩები არ დაბრუნდნენ. ამის შემდეგ მან დაიბარა ალბა ლონგელი ელჩები და ათქმევინა მათი პრეტენზიები, როდესაც ჩამოსულებმ სიტყვა დაასრულეს, ტულუსმა განუცხადა რომ მისი ელჩები პირველები მივიდნენ ალბა ლონგას მეფესთან და მან ომი უკვე გამოაცხადა.
 
+ორივე მხარე საგულდაგულოდ მოემზადა საომრად. ალბა ლონგელთა ჯარი პირველი შემოიჭრა რომის მიწებზე და ქალაქის მახლობლად დაბანაკდა. მათი მეფე ამ ბანაკში გარდაიცვალა და მათ დიქტატორი აირჩიეს.
+
 ==წყაროები==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
