--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -10,7 +10,7 @@
 
 ხოლო ალბა ლონგელი ელჩები მეფემ კარგად მიიღო, გამართა ნადიმები და იქამდე არ ათქმევინა სათქმელი სანამ მისი ელჩები არ დაბრუნდნენ. ამის შემდეგ მან დაიბარა ალბა ლონგელი ელჩები და ათქმევინა მათი პრეტენზიები, როდესაც ჩამოსულებმ სიტყვა დაასრულეს, ტულუსმა განუცხადა რომ მისი ელჩები პირველები მივიდნენ ალბა ლონგას მეფესთან და მან ომი უკვე გამოაცხადა.
 
-ორივე მხარე საგულდაგულოდ მოემზადა საომრად. ალბა ლონგელთა ჯარი პირველი შემოიჭრა რომის მიწებზე და ქალაქის მახლობლად დაბანაკდა. მათი მეფე ამ ბანაკში გარდაიცვალა და მათ დიქტატორი აირჩიეს.
+ორივე მხარე საგულდაგულოდ მოემზადა საომრად. ალბა ლონგელთა ჯარი პირველი შემოიჭრა რომის მიწებზე და ქალაქის მახლობლად დაბანაკდა. მათი მეფე ამ ბანაკში გარდაიცვალა და მათ დიქტატორი აირჩიეს. მეფის სიკვდილი ტულუსმა ღმერთთა ნიშნად მიიღო. ერთ ღამეს იგი ჩუმად გავიდა ქალაქიდან ჯართან ერთად, გაცდა ალბა ლონგელთა ბანაკს და მათ ქალაქისკენ დაიძრა, როდესაც დიქტატორმა ეს გაიგო, იგი იძულებული გახდა დადევნებოდა რომაელებს. როდესაც ორი ჯარი შეხვდა ერთმანეთს ალბა ლონგელმა დიქტატორმა შესთავაზა ტულუსს ტყვილა არ დაეღვარა სისხლი, რადგან მათ ერთმანეთის გარდა უფრო ძლიერი მტერი - ეტრუსკები ჰყავდათ, ხოლო გამოეყვანა სამი მეომარი თავისი ჯარიდან რომლებიც მოწინააღმდეგის სამ მეომარს შეერძოლებოდნენ, ვინც გაიმარჯვებდა, მისი ქალაქი იქნებოდა გამარჯვებული და იბატონებდა დამარცხებულ ქალაქში.
 
 ==წყაროები==
 
