--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -13,6 +13,8 @@
 ორივე მხარე საგულდაგულოდ მოემზადა საომრად. ალბა ლონგელთა ჯარი პირველი შემოიჭრა რომის მიწებზე და ქალაქის მახლობლად დაბანაკდა. მათი მეფე ამ ბანაკში გარდაიცვალა და მათ დიქტატორი აირჩიეს. მეფის სიკვდილი ტულუსმა ღმერთთა ნიშნად მიიღო. ერთ ღამეს იგი ჩუმად გავიდა ქალაქიდან ჯართან ერთად, გაცდა ალბა ლონგელთა ბანაკს და მათ ქალაქისკენ დაიძრა, როდესაც დიქტატორმა ეს გაიგო, იგი იძულებული გახდა დადევნებოდა რომაელებს. როდესაც ორი ჯარი შეხვდა ერთმანეთს ალბა ლონგელმა დიქტატორმა შესთავაზა ტულუსს ტყვილა არ დაეღვარა სისხლი, რადგან მათ ერთმანეთის გარდა უფრო ძლიერი მტერი - ეტრუსკები ჰყავდათ, ხოლო გამოეყვანა სამი მეომარი თავისი ჯარიდან რომლებიც მოწინააღმდეგის სამ მეომარს შეერძოლებოდნენ, ვინც გაიმარჯვებდა, მისი ქალაქი იქნებოდა გამარჯვებული და იბატონებდა დამარცხებულ ქალაქში.
 [[სურათი:Oath of the Horatii.JPG|thumb|ჰორაციუსების ფიცი]]
 
+სამი რომაელი მეომრიდან ორნი დაიღუპნენ, ხოლო მესამემ სძლია დაჭრილ ალბა ლონგელ მეომრებს და გაიმარჯვა. ალბიელთა დიქტატორი უსიტყვოდ დაემორჩილა ტულუსს. მაგრამ მშვიდობა მათთან ხანგძლივი არ იყო.
+
 ==წყაროები==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
