--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -14,6 +14,7 @@
 [[სურათი:Oath of the Horatii.JPG|thumb|ჰორაციუსების ფიცი]]
 
 სამი რომაელი მეომრიდან ორნი დაიღუპნენ, ხოლო მესამემ სძლია დაჭრილ ალბა ლონგელ მეომრებს და გაიმარჯვა. ალბიელთა დიქტატორი უსიტყვოდ დაემორჩილა ტულუსს. მაგრამ მშვიდობა მათთან ხანგძლივი არ იყო.
+დიქტატორი მეტიუსი ხალხის უკმაყოფილემაბ აიძულა რომის წინააღმდეს დაეწყო მოქმედებები, იგი ხვდებოდფა რომ საომარი რსურსები არ გააჩნდა, ამიტომ მან ყველანაერად ეცადა გადაემტერებინა რომისთვის ფიდეას მოსახლეობა. როდესაც ეს კონფლიქტი ჩაცხრა, ტულუსმა მოუხმო მეტიუსს ჯარით გამოსულიყო ეტრუსკების წინააღმდეგ.
 
 ==წყაროები==
 
