--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -16,6 +16,8 @@
 სამი რომაელი მეომრიდან ორნი დაიღუპნენ, ხოლო მესამემ სძლია დაჭრილ ალბა ლონგელ მეომრებს და გაიმარჯვა. ალბიელთა დიქტატორი უსიტყვოდ დაემორჩილა ტულუსს. მაგრამ მშვიდობა მათთან ხანგძლივი არ იყო.
 დიქტატორი მეტიუსი ხალხის უკმაყოფილემაბ აიძულა რომის წინააღმდეს დაეწყო მოქმედებები, იგი ხვდებოდფა რომ საომარი რსურსები არ გააჩნდა, ამიტომ მან ყველანაერად ეცადა გადაემტერებინა რომისთვის ფიდეას მოსახლეობა. როდესაც ეს კონფლიქტი ჩაცხრა, ტულუსმა მოუხმო მეტიუსს ჯარით გამოსულიყო ეტრუსკების წინააღმდეგ.
 
+ალბა ლონგელები ბრძოლის ველიდან გაიქცნენ, მიუხედავად ამისა რომაელებმა ბრძოლა მოიგეს და მტრის არმია სასტიკად გაჟლიტეს. ბრძოლის შემდეგ მეტიუსი ლაშქარითურთ დაბრუნდა რომაელთა ბანაკში და მოულოცა მეფეს გამარკვება. მეორე დილას ტულუსმა ბრძანა ორივე ჯარი შეკრებილიყო მის მოსასმენად, წინ ალბა ლონეგები დააყენეს ხოლო მათ გარშემო რომაელები. აქ მან წარმოთქვა სიტყვა, რომლითაც მეტიუსის ღალატი ამხილა და გასცა მისი მოკვლის ბრძანება, ხოლო ალბელებს მოუწოდა რომში გადმოსახლებისკენ, რათა შეექმნათ საერთო სახელმწიფო. ამრიგად ქალაქი დაინგრა და რომს ახალი მოსახლეობა შეემატა.
+
 ==წყაროები==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
