--- a/ტულუს_ჰოსტილიუსი.mw
+++ b/ტულუს_ჰოსტილიუსი.mw
@@ -18,6 +18,12 @@
 
 ალბა ლონგელები ბრძოლის ველიდან გაიქცნენ, მიუხედავად ამისა რომაელებმა ბრძოლა მოიგეს და მტრის არმია სასტიკად გაჟლიტეს. ბრძოლის შემდეგ მეტიუსი ლაშქარითურთ დაბრუნდა რომაელთა ბანაკში და მოულოცა მეფეს გამარკვება. მეორე დილას ტულუსმა ბრძანა ორივე ჯარი შეკრებილიყო მის მოსასმენად, წინ ალბა ლონეგები დააყენეს ხოლო მათ გარშემო რომაელები. აქ მან წარმოთქვა სიტყვა, რომლითაც მეტიუსის ღალატი ამხილა და გასცა მისი მოკვლის ბრძანება, ხოლო ალბელებს მოუწოდა რომში გადმოსახლებისკენ, რათა შეექმნათ საერთო სახელმწიფო. ამრიგად ქალაქი დაინგრა და რომს ახალი მოსახლეობა შეემატა.
 
+ალბა ლონგელი უხუცესები სენატს მიემატნენ, ტულუსმა სენატის სხდომებისთვის კურია ააშენა. რომი კი გაიზარდა და გაფართოვდა. ალბალონგელი მხედრებისგან 30 რაზმი ჩამოყალიბდა.
+
+ამ ძალებზე დაყრდნობით რომაელებმა საბინელებს გამოუცხადეს ომი. ორივე მხარე საგულდაგულოდ მოემზადა საობრად და რომაელებმა გაიმარჯვეს.
+
+შემდგომი დამპყრობლური პოლიტიკის განხორციელებასი მეფეს ხელი ავადმყოფობამ შეუშალა. ტულუსმა ჩათვალა რომ ღმერთები განარისხა და ამიტომ გახდა ავად. ნუმა პომპილიუსის წმინდა ჩანაწერების მიხედვით მად დაიწყო რიტუალების შესრულება, მან ან სწორე ვერ აღასრულა რუტუალი ან საერთოდ არასწორ რიტუალს ასრულებდა, მაგრამ მის სასახლეს მეხი დაეცა და იგი დაიწვა. მისი მეფობა 32 წელი გრძელდებოდა.
+
 ==წყაროები==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
