--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -2,7 +2,7 @@
 
 ==ბიოგრაფია==
 
-{{ესკიზი}}
+[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს.
 
 ==ლიტერატურა==
 
