--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -2,7 +2,7 @@
 
 ==ბიოგრაფია==
 
-[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს.
+[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბიუს ადათწესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
 
 ==ლიტერატურა==
 
