--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -4,6 +4,8 @@
 
 [[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბიუს ადათწესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
 
+მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს.
+
 ==ლიტერატურა==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
